Enemy Spawn included

--- a/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -161,10 +161,10 @@ StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Phy
 SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,
 Landscape=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 MoveablePlatform_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
-K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,
+K2Node_VariableGet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
 CapsuleComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
 BP_ThirdPersonCharacter_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,
-PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,
+PropertyWrapper=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
 PlayerStart=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,WaterBodyCustom.Physics.ConstraintsGroup,
 Actor=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,
 PrimitiveComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
@@ -178,7 +178,7 @@ TriggerBox=StaticMeshActor.Physics.ConstraintsGroup,
 TriggerBox_Blueprint_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 PointLight=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,
 PointLight_Blueprint_C=StaticMeshActor.Physics.ConstraintsGroup,
-K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,
+K2Node_VariableSet=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
 PointLightComponent=StaticMeshActor.Physics.ConstraintsGroup,
 TriggerSphere=StaticMeshActor.Physics.ConstraintsGroup,
 K2Node_Variable=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
@@ -198,7 +198,7 @@ GeometryCollectionActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshCompo
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative,
 K2Node_InputKey=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 rotation_C=
-K2Node_CustomEvent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
+K2Node_CustomEvent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
 MoveablePlatform_2_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,
 LandscapeGizmoActiveActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,
 WorldSettings=WorldSettings.WorldPartition.None,WorldSettings.GameMode.SelectedGameModeDetails,
@@ -300,6 +300,7 @@ SkeletalMeshComponent=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGe
 enemy_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.01 - BaseColor,MaterialEditorInstanceConstant.ParameterGroups.02 - Textures,MaterialEditorInstanceConstant.ParameterGroups.03 - Logo,MaterialEditorInstanceConstant.ParameterGroups.04 - Diffraction,
 MaterialInstanceConstant=
+enemySpawn_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -391,6 +392,7 @@ LastLevel=/Game/levels/Greybox_level
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/EnemyAI/enemy.enemy
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1999,6 +2001,15 @@ MaterialEditorInstanceConstant.Previewing=True
 MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
 MulticastInlineDelegatePropertyWrapper.Variable=True
 MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+enemySpawn_C.Tick=True
+enemySpawn_C.Replication=True
+enemySpawn_C.Rendering=True
+enemySpawn_C.Collision=True
+enemySpawn_C.Actor=True
+enemySpawn_C.Input=True
+enemySpawn_C.HLOD=True
+enemySpawn_C.WorldPartition=True
+enemySpawn_C.Events=True
 
 [DetailPropertyExpansion]
 LandscapeEditorObject="\"Object\" \"Object.New Landscape.ImportLandscape_Layers\" \"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
@@ -3239,26 +3250,26 @@ SingleInstantiationPlacementMode=0
 DisplayedStatsPageName=TextureStats
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01
-MRUItem1=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/EnemyAI/enemy
-MRUItem4=/Game/EnemyAI/enemyGameMode
-MRUItem5=/Game/SwimmingBlendSpace
-MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem7=/Game/EnemyAI/PickRandomLocation
-MRUItem8=/Game/EnemyAI/Enemy_BlackBoard
-MRUItem9=/Game/EnemyAI/Enemy_AI_Controller
-MRUItem10=/Game/EnemyAI/Enemy_AI
-MRUItem11=/Game/EnemyAI/Enemy_Behavior_Tree
-MRUItem12=/Game/TriggerBox_Blueprint
-MRUItem13=/Game/Cylinder_GeometryCollection
-MRUItem14=/Game/branch
-MRUItem15=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem16=/Game/ThirdPerson/Blueprints/WaterBodyLake_Blueprint
-MRUItem17=/Game/ThirdPerson/Blueprints/Lake3_Blueprint
-MRUItem18=/Game/ChangeLight_Blueprint
-MRUItem19=/Game/rotation
+MRUItem0=/Game/EnemyAI/enemySpawn
+MRUItem1=/Game/EnemyAI/enemy
+MRUItem2=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01
+MRUItem3=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/EnemyAI/enemyGameMode
+MRUItem6=/Game/SwimmingBlendSpace
+MRUItem7=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem8=/Game/EnemyAI/PickRandomLocation
+MRUItem9=/Game/EnemyAI/Enemy_BlackBoard
+MRUItem10=/Game/EnemyAI/Enemy_AI_Controller
+MRUItem11=/Game/EnemyAI/Enemy_AI
+MRUItem12=/Game/EnemyAI/Enemy_Behavior_Tree
+MRUItem13=/Game/TriggerBox_Blueprint
+MRUItem14=/Game/Cylinder_GeometryCollection
+MRUItem15=/Game/branch
+MRUItem16=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
+MRUItem17=/Game/ThirdPerson/Blueprints/WaterBodyLake_Blueprint
+MRUItem18=/Game/ThirdPerson/Blueprints/Lake3_Blueprint
+MRUItem19=/Game/ChangeLight_Blueprint
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
