rigged character test

--- a/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -391,7 +391,7 @@ SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
+LastLevel=/Game/levels/Alpha_Level
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -2052,6 +2052,7 @@ K2Node_FunctionEntry.GraphNodeDetail=True
 K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
+FbxImportUI.Material=True
 
 [DetailPropertyExpansion]
 LandscapeEditorObject="\"Object\" \"Object.New Landscape.ImportLandscape_Layers\" \"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
@@ -2317,6 +2318,7 @@ Widget="\"Object\" "
 Visual="\"Object\" "
 HealthUI_C="\"Object\" "
 UserWidget="\"Object\" "
+FbxImportUI="\"Object\" "
 
 [RootWindow]
 ScreenPosition=X=478.000 Y=298.000
@@ -3460,7 +3462,7 @@ GraphEditorQuickJumps=()
 /Game/HealthUI/HealthUI.HealthUI=0
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
@@ -3670,7 +3672,7 @@ LodDistance6=0.000000
 LodDistance7=0.000000
 MinimumLodNumber=0
 LodNumber=0
-bImportAnimations=True
+bImportAnimations=False
 bImportMaterials=True
 bImportTextures=True
 
