Blender to Unreal SKM import

--- a/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ThirdPersonMap/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -304,6 +304,7 @@ MaterialInstanceConstant=
 enemySpawn_C=
 EnemyGameMode_C=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,enemy_C.Physics.ConstraintsGroup,
 K2Node_MacroInstance=StaticMeshActor.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Materials.MaterialList,StaticMeshComponent.Collision.Collision,GeometryCollectionActor.Physics.ConstraintsGroup,GeometryCollectionActor.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshActor.Materials.MaterialList,WaterBodyCustom.Physics.ConstraintsGroup,CapsuleComponent.Physics.ConstraintsGroup,InputSettings.Bindings.ActionMappings.Switch Cam,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,Enemy_AI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup,
+PhysicsConstraintTemplate=PhysicsConstraintTemplate.Angular Limits.Swing Limits,PhysicsConstraintTemplate.Angular Limits.Twist Limits,PhysicsConstraintTemplate.LinearMotor.Linear Position Drive,PhysicsConstraintTemplate.LinearMotor.Linear Velocity Drive,PhysicsConstraintTemplate.AngularMotor.Orientation Drive,PhysicsConstraintTemplate.AngularMotor.Velocity Drive,
 
 [ContentBrowser]
 AssetDialog.ThumbnailSize=2
@@ -335,7 +336,7 @@ ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/levels
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
 ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -394,7 +395,7 @@ SequenceBrowser.HiddenColumns=Class
 LastLevel=/Game/levels/Alpha_Level
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -2053,23 +2054,40 @@ K2Node_FunctionEntry.Graph=True
 K2Node_FunctionEntry.Inputs=True
 K2Node_FunctionEntry.Outputs=True
 FbxImportUI.Material=True
+FbxExportOption.Exporter=True
+FbxExportOption.Mesh=True
+FbxExportOption.StaticMesh=True
+FbxExportOption.SkeletalMesh=True
+FbxExportOption.Animation=True
+PersonaPreviewSceneDescription.Animation Blueprint=True
+PhysicsAssetEditorOptions.Anim=True
+PhysicsAssetEditorOptions.Simulation=True
+PhysicsAssetEditorOptions.MouseSpring=True
+PhysicsAssetEditorOptions.Poking=True
+PhysicsAssetEditorOptions.Clothing=True
+PhysicsConstraintTemplate.Constraint=True
+PhysicsConstraintTemplate.Constraint Behavior=True
+PhysicsConstraintTemplate.Linear Limits=True
+PhysicsConstraintTemplate.Angular Limits=True
+PhysicsConstraintTemplate.LinearMotor=True
+PhysicsConstraintTemplate.AngularMotor=True
 
 [DetailPropertyExpansion]
 LandscapeEditorObject="\"Object\" \"Object.New Landscape.ImportLandscape_Layers\" \"Object.New Landscape.ImportLandscape_Layers.ImportLandscape_Layers[5]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 EditorLoadingSavingSettings="\"Object\" \"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object\" \"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object\" \"Object.Options.bSendUsageData\" "
 StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
-StreamableRenderAsset="\"Object.StaticMesh.BodySetup.Object.AggGeom.SphylElems.SphylElems[0]\" "
+StreamableRenderAsset="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 WaterBodyLake="\"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings.PostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.COMNudge\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.InertiaTensorScale\" "
 WaterBody="\"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Rendering.UnderwaterPostProcessSettings.PostProcessSettings\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.COMNudge\" \"Object.Water.WaterBodyComponent.Object.Collision.BodyInstance.InertiaTensorScale\" "
 StaticMeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-SceneComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-ActorComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+MeshComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PrimitiveComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object\" \"Object.Rendering.OverrideMaterials\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Lake3_Blueprint_C="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightingChannels\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CharacterMovementComponent="\"Object\" "
 PawnMovementComponent="\"Object\" "
@@ -2319,11 +2337,21 @@ Visual="\"Object\" "
 HealthUI_C="\"Object\" "
 UserWidget="\"Object\" "
 FbxImportUI="\"Object\" "
+AnimSequence="\"Object\" "
+AnimSequenceBase="\"Object\" "
+FbxExportOption="\"Object\" "
+SkeletalMesh="\"Object\" "
+LODInfoUILayout="\"Object\" "
+BoneProxy="\"Object\" "
+PhysicsAsset="\"Object\" "
+PhysicsAssetGenerationSettings="\"Object\" "
+PhysicsAssetEditorOptions="\"Object\" "
+PhysicsConstraintTemplate="\"Object\" "
 
 [RootWindow]
 ScreenPosition=X=478.000 Y=298.000
 WindowSize=X=1018.000 Y=720.000
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2343,8 +2371,8 @@ UNR=../../../../../../Users/shane/Desktop/CA_Obstacle_Course/CA_Obstacle_Course/
 BRUSH=../../../../../../Users/shane/Documents/Unreal Projects/ThirdPersonMap/Content/
 FBX=../../../../../../Users/shane/Documents/Unreal Projects/ThirdPersonMap/Content/
 FBXAnim=../../../../../../Users/shane/Documents/Unreal Projects/ThirdPersonMap/Content/
-GenericImport=../../../../../../Users/shane/Downloads/PunchingAssests/GetHit.FBX
-GenericExport=../../../../../../Users/shane/Documents/Unreal Projects/ThirdPersonMap/Content/
+GenericImport=../../../../../../Users/shane/Desktop/blender library/objects/2115_Main_Character/Rigged_Main_Character_T-Pose.fbx
+GenericExport=../../../../../../Users/shane/Desktop/blender library/objects/SKM_Manny.FBX
 GenericOpen=../../../../../../Users/shane/Documents/Unreal Projects/ThirdPersonMap/Content/
 GenericSave=../../../../../../Users/shane/Documents/Unreal Projects/ThirdPersonMap/Content/
 MeshImportExport=../../../../../../Users/shane/Documents/Unreal Projects/ThirdPersonMap/Content/
@@ -3283,6 +3311,10 @@ WorldBrowser.TimeStamp=2022.09.20-17.27.40
 WorldBrowser.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2022.09.20-17.27.18
 ExternalImagePicker.LastCompileMethod=Unknown
+GLTFCore.TimeStamp=2022.09.20-17.39.18
+GLTFCore.LastCompileMethod=Unknown
+GLTFImporter.TimeStamp=2022.09.20-17.39.18
+GLTFImporter.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -3303,26 +3335,26 @@ SingleInstantiationPlacementMode=0
 DisplayedStatsPageName=TextureStats
 
 [ContentBrowserRecent]
-MRUItem0=/Game/levels/Alpha_Level
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/Characters/Mannequins/Animations/ABP_Manny
-MRUItem3=/Game/EnemyAI/enemy
-MRUItem4=/Game/HealthUI/HealthUI
-MRUItem5=/Game/EnemyAI/enemySpawn
-MRUItem6=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01
-MRUItem7=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02
-MRUItem8=/Game/EnemyAI/enemyGameMode
-MRUItem9=/Game/SwimmingBlendSpace
-MRUItem10=/Game/EnemyAI/PickRandomLocation
-MRUItem11=/Game/EnemyAI/Enemy_BlackBoard
-MRUItem12=/Game/EnemyAI/Enemy_AI_Controller
-MRUItem13=/Game/EnemyAI/Enemy_AI
-MRUItem14=/Game/EnemyAI/Enemy_Behavior_Tree
-MRUItem15=/Game/TriggerBox_Blueprint
-MRUItem16=/Game/Cylinder_GeometryCollection
-MRUItem17=/Game/branch
-MRUItem18=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode
-MRUItem19=/Game/ThirdPerson/Blueprints/WaterBodyLake_Blueprint
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/MainCharacter/SKM_MainCharacter_PhysicsAsset
+MRUItem2=/Game/MainCharacter/SKM_MainCharacter
+MRUItem3=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem4=/Game/SwimmingBlendSpace
+MRUItem5=/Game/MainCharacter/MainCharacter_T-pose_001_Skeleton
+MRUItem6=/Game/MainCharacter/MainCharacter_T-pose_001_PhysicsAsset
+MRUItem7=/Game/MainCharacter/MainCharacter_T-pose_001
+MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem10=/Game/Animations/Idle_Main_Character_Anim
+MRUItem11=/Game/levels/Alpha_Level
+MRUItem12=/Game/Characters/Mannequins/Animations/ABP_Manny
+MRUItem13=/Game/EnemyAI/enemy
+MRUItem14=/Game/HealthUI/HealthUI
+MRUItem15=/Game/EnemyAI/enemySpawn
+MRUItem16=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_01
+MRUItem17=/Game/Characters/Mannequins/Materials/Instances/Manny/MI_Manny_02
+MRUItem18=/Game/EnemyAI/enemyGameMode
+MRUItem19=/Game/EnemyAI/PickRandomLocation
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3507,8 +3539,17 @@ SkeletalMeshComponent.Physics=True
 Enemy_AI_C.Cooking=True
 K2Node_VariableGet.Variable=True
 Enemy_AI_C.Animation=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/MainCharacter/MainCharacter_T-pose_001.MainCharacter_T-pose_001;
+RecentlyPlaced=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny;
+RecentlyPlaced=/Game/Characters/Mannequins/Meshes/SK_Mannequin.SK_Mannequin;
+RecentlyPlaced=/Game/MainCharacter/MainCharacter_T-pose_Skeleton.MainCharacter_T-pose_Skeleton;
+RecentlyPlaced=/Game/MainCharacter/MainCharacter_T-pose_Anim_Armature_002_Armature_mixamo_com_Layer0.MainCharacter_T-pose_Anim_Armature_002_Armature_mixamo_com_Layer0;
+RecentlyPlaced=/Game/Main_Character/Rigged_Main_Character_T-Pose.Rigged_Main_Character_T-Pose;
+RecentlyPlaced=/Game/Animations/Idle_Main_Character_Anim.Idle_Main_Character_Anim;
 RecentlyPlaced=/Game/EnemyAI/Enemy_AI.Enemy_AI;
 RecentlyPlaced=/Game/EnemyAI/enemySpawn.enemySpawn;
 RecentlyPlaced=/Game/EnemyAI/enemy.enemy;
@@ -3522,13 +3563,6 @@ RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBas
 RecentlyPlaced=/Script/Engine.Character;/Engine/Transient.ActorFactoryCharacter_0
 RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
 RecentlyPlaced=/Game/frac_test_1.frac_test_1;
-RecentlyPlaced=/Script/Water.WaterBodyCustom;/Engine/Transient.WaterBodyCustomActorFactory_0
-RecentlyPlaced=/Script/Water.WaterBodyLake;/Engine/Transient.WaterBodyLakeActorFactory_0
-RecentlyPlaced=/Script/Water.WaterZone;/Engine/Transient.WaterZoneActorFactory_0
-RecentlyPlaced=/Game/Punch1.Punch1;
-RecentlyPlaced=/Game/Cylinder_GeometryCollection.Cylinder_GeometryCollection;
-RecentlyPlaced=/Game/GetHit.GetHit;
-RecentlyPlaced=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple.SKM_Quinn_Simple;
 
 [PluginBrowser]
 InstalledPlugins=BasicMontageSequenceManager
@@ -3607,7 +3641,7 @@ bAlwaysOpenAnimationAssetsInNewTab=False
 bMuteAudio=False
 bUseAudioAttenuation=True
 DefaultLocalAxesSelection=2
-DefaultBoneDrawSelection=1
+DefaultBoneDrawSelection=5
 SectionTimingNodeColor=(R=0.390000,G=0.390000,B=1.000000,A=0.750000)
 NotifyTimingNodeColor=(R=0.800000,G=0.100000,B=0.100000,A=1.000000)
 BranchingPointTimingNodeColor=(R=0.500000,G=1.000000,B=1.000000,A=1.000000)
@@ -3620,7 +3654,7 @@ bAllowPreviewMeshCollectionsToUseCustomAnimBP=False
 bAllowMeshSectionSelection=False
 NumFolderFiltersInAssetBrowser=2
 AssetEditorOptions=(Context="SkeletonEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
-AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
+AssetEditorOptions=(Context="SkeletalMeshEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Unlit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="AnimationEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="AnimationBlueprintEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
 AssetEditorOptions=(Context="PhysicsAssetEditor",ViewportConfigs[0]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[1]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[2]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""),ViewportConfigs[3]=(ViewModeIndex=VMI_Lit,ViewFOV=53.430000,CameraSpeedSetting=4,CameraSpeedScalar=1.000000,CameraFollowMode=None,CameraFollowBoneName=""))
@@ -3866,4 +3900,16 @@ bCompileDirectorOnEvaluate=False
 TrajectoryPathCap=250
 FrameNumberDisplayFormat=Seconds
 MovieRendererName=
+
+[FBX_Export_UI_Option_FbxExportOption]
+FbxExportCompatibility=FBX_2013
+bASCII=False
+bForceFrontXAxis=False
+VertexColor=False
+LevelOfDetail=False
+Collision=False
+bExportMorphTargets=False
+bExportPreviewMesh=False
+MapSkeletalMotionToRoot=False
+bExportLocalTime=False
 
