--- a/ThirdPersonMap/Saved/Config/WindowsEditor/Engine.ini
+++ b/ThirdPersonMap/Saved/Config/WindowsEditor/Engine.ini
@@ -35,6 +35,7 @@ Paths=../../../Engine/Plugins/Experimental/Water/Content
 Paths=../../../Engine/Plugins/Experimental/FieldSystemPlugin/Content
 Paths=../../../Engine/Plugins/Experimental/ChaosCaching/Content
 Paths=../../../Engine/Plugins/Experimental/ChaosVehiclesPlugin/Content
+Paths=../../../Engine/Plugins/Editor/GLTFImporter/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnabledByDefault=False
@@ -62,12 +63,4 @@ TemplateMapInfos=(ThumbnailTexture=None,Thumbnail="/Engine/Maps/Templates/Thumbn
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
-
-[WindowsApplication.Accessibility]
-StickyKeysHotkey=True
-ToggleKeysHotkey=True
-FilterKeysHotkey=True
-StickyKeysConfirmation=True
-ToggleKeysConfirmation=True
-FilterKeysConfirmation=True
 
