--- a/ThirdPersonMap/ThirdPersonMap.uproject
+++ b/ThirdPersonMap/ThirdPersonMap.uproject
@@ -30,6 +30,10 @@
 		{
 			"Name": "ChaosVehiclesPlugin",
 			"Enabled": true
+		},
+		{
+			"Name": "GLTFImporter",
+			"Enabled": true
 		}
 	]
 }
